--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@
     --lightgray: #f5f5f5;
     --darkgray: #1d1d1d;
     --footergray: #3a3a3a;
-    --blue: #2477e4;
+    --blue: #1A73E0;
     --orange: #f89626;
 
     --text-color-primary: var(--darkgray);
@@ -242,9 +242,9 @@ nav,
     white-space: nowrap;
     
     &.is-primary {
-        background-color: #00d1b1;
+        background-color: #FF6D13;
         border-color: transparent;
-        color: #fff;
+        color: #2E2E2E;
     }
 }
 
@@ -450,8 +450,6 @@ a .fa-light {
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     color: var(--white);
-    margin: 0;
-   
 
     & img {
         width: 200px;
