Revert "fixed padding in hamburger"
This reverts commit 5753d16042b9aac68b7a21a2dfbe59da9e4e6dfd.

--- a/public/style.css
+++ b/public/style.css
@@ -252,7 +252,7 @@ textarea {
     font-size: 1.75rem;
     height: 42px;
     line-height: 100%;
-    padding: 0 0 7px;
+    padding-bottom: 7px;
     width: 42px;
 }
 
