Fixes #7 - Increase padding in aside's Fixes #11 - Mobile Top nav should be a menu

--- a/public/style.css
+++ b/public/style.css
@@ -481,7 +481,7 @@ section,
         & > li {
             background: var(--blue);
             border-radius: 2rem;
-            padding: .5rem 1rem
+            padding: .5rem 1rem;
         }
     }
 }
