--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,9 @@
     --link-color: rgb(0, 102, 204);
     --link-color-alt: rgb(92, 173, 255);
 
+    --is-primary-text: #ffffff;
+    --is-secondary-text: #ffffff;
+
 
     /* Typography */
     --font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -39,21 +42,29 @@
     --heading-color-primary: var(--blue);
 }
 
+*,
+::before,
+::after {
+  border-width: 0;
+  box-sizing: border-box;
+}
+html {
+    scroll-behavior: smooth;
+}
+
 
 /* Start -- Minimal Preflight Reset */
-blockquote,
-dl,
-dd,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
-hr,
-figure,
 pre {
-  margin: 0;
+    margin: 0;
+    font-size: inherit;
+    font-weight: inherit;
+    line-height: 1;
 }
 
 p {
@@ -63,42 +74,51 @@ p {
     }
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: inherit;
-  font-weight: inherit;
-  line-height: 1.125;
+img {
+    border-style: none;
+    height: auto;
+    max-width: 100%;
+    vertical-align: middle;
 }
 
-ol,
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+label {
+    display: block;
+}
+input,
+textarea {
+    display: block;
+    font-size: 1.125rem;
+    margin-bottom: .5rem;
+    padding: .5rem 1rem;
+    width: 100%
 }
 
-img,
-svg,
-video {
-  display: block;
-  max-width: 100%;
-  height: auto;
+
+a {
+    background-color: transparent;
+    color: var(--link-color);
+    text-decoration: none;
+    outline: none;
 }
 
-*,
-::before,
-::after {
-  border-width: 0;
-  border-style: solid;
-  box-sizing: border-box;
+a:link,         /* A link that has not been visited */
+a:visited {     /* A link that has been visited */
+    color: var(--link-color);
+}
+a:hover,        /* A link that is hovered on */
+a:active {      /* A link that is selected */
+    text-decoration: underline;
 }
 
-html {
-    scroll-behavior: smooth;
+button {
+    font-size: 1.125rem;
+    border-radius: 5px;
+    border-width: 1px;
+    cursor: pointer;
+    justify-content: center;
+    padding: .5em 1em;
+    text-align: center;
+    white-space: nowrap;
 }
 /* End -- Minimal Preflight Reset */
 
@@ -114,7 +134,6 @@ body {
     font-weight: var(--font-weight);
     line-height: var(--line-height);
     margin: 0;
-    text-align: start;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
@@ -130,9 +149,12 @@ body {
 
     @media (min-width: 1280px) {
         font-size: 1.375rem;
-    }
+    }   
+}
 
-    
+section {
+    margin: 0;
+    padding: 1rem;
 }
 
 h1 {
@@ -169,204 +191,7 @@ h4 {
 }
 
 
-small {
-    font-size: 80%;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-img {
-    border-style: none;
-    height: auto;
-    max-width: 100%;
-    vertical-align: middle;
-}
-
-a {
-    background-color: transparent;
-    color: var(--link-color);
-    text-decoration: none;
-    outline: none;
-}
-
-a:link,         /* A link that has not been visited */
-a:visited {     /* A link that has been visited */
-    color: var(--link-color);
-    text-decoration: underline;
-}
-a:hover,        /* A link that is hovered on */
-a:active {      /* A link that is selected */
-    text-decoration: underline;
-}
-
-input,
-button,
-select,
-optgroup,
-textarea {
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
-
-
-/* ---------------- */
-
-
-
-.navbar {
-    display: flex;
-    flex-wrap: wrap;
-    font-size: .8rem;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-
-    & h1 {
-        margin: 0;
-    }
-}
-
-.navigation {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    visibility: hidden;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-in, visibility 0.2s ease-out;
-
-
-    & li a {
-            text-decoration: none;
-            display: block;
-            line-height: 1.5;
-            padding: .5em .51em;
-    }
-}
-
-.menu-toggle {
-    align-items: center;
-    background-color: transparent;
-    border: 1px solid navy;
-    font-size: 1.75rem;
-    height: 42px;
-    line-height: 100%;
-    padding: 0 0 7px;
-    width: 42px;
-}
-
-@media (min-width: 768px) {
-    .menu-toggle {
-        display: none;
-    }
-    .navigation {
-        flex-basis: auto;
-        display: flex;
-        justify-content: flex-end;
-        gap: 1rem;
-        visibility: visible;
-        max-height: initial;
-    }
-}
-
-/* End -- Element Styling */
-
-
-
-
-/* Start -- Button Styling */
-
-.button {
-    background-color: #fff;
-    border-color: #dbdbdb;
-    border-radius: .375em;
-    border-width: 1px;
-    color: #353535;
-    cursor: pointer;
-    justify-content: center;
-    padding: .5em 1em;
-    text-align: center;
-    white-space: nowrap;
-    
-    &.is-primary {
-        background-color: #FF6D13;
-        border-color: transparent;
-        color: #2E2E2E;
-    }
-}
-
-
-.buttons .button {
-    margin-bottom: .5rem;
-}
-.buttons .button:not(:last-child) {
-    margin-right: .5rem;
-}
-
-button:disabled,
-button[disabled] {
-    border: 1px solid #999999;
-    background-color: #cccccc;
-    color: #666666;
-    cursor: default;
-}
-
-/* End -- Button Styling */
-
-
-/* Start -- Section Styles */
-section,
-.section {
-    padding: 1rem;
-    
-    /*@media (min-width: 768px) {
-        padding: 4rem;
-    }
-    
-    @media (min-width: 1024px) {
-        padding: 4rem 6rem;
-    }
-    
-    @media (min-width: 1280px) {
-        padding: 4rem 8rem;
-    } */
-    & h2 {
-        text-align: center;
-        font-size: 2rem;
-        font-weight: 900;
-    }
-}
-/* End -- Section Styles */
-
-
-/* Start -- Section Styles */
-
-
-
-
-
 /* Start -- Utilities */
-.text-limit {
-    max-width: 80ch;
-    margin: 0 auto;
-}
-
-.flex-row {
-    flex-direction: row;
-}
-
-.flex-column {
-    flex-direction: column;
-}
-
-.space-between {
-    justify-content: space-between !important;
-}
-
 .success {
     border: 1px solid var(--success-border);
     background-color: var(--success-bg);
@@ -383,42 +208,58 @@ section,
     padding: var(--spacing);
 }
 
-.flex-2 {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    justify-content: center;
-    align-items: center;
-    
-    @media (min-width: 768px) {
-        flex-direction: row;
-    }
+.is-primary {
+    background-color: var(--orange);
+    border: 1px solid var(--orange);
+    color: var(--is-primary-text);
+}
+
+.is-secondary {
+    background-color: transparent;
+    border: 1px solid var(--orange);
+    color: var(--is-secondary-text);
 }
 /* End -- Utilities */
 
 
 
 
-/* Start -- Site Header Styles */
+/* Page Styling Below Here */
+
 .site-header {
     align-items: center;
-    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+}
+.site-header-text {
+    margin: 0 auto 0 0
+}
+
+.site-navigation {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: .8rem;
+    align-items: center;
+}
+
+.navigation {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 0 1rem;
-    position: fixed;
-    top: 0;
-    width: 100%;
-
-
-    @media (min-width: 768px) {
-        padding: 0 2rem;
-    }
+    gap: .5rem;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-in, visibility 0.2s ease-out;
 }
-/* End -- Site Header Styles */
 
-/* Start -- Hero Styles */
+.navigation button {
+    font-size: .75rem;
+}
+
 .hero {
     min-height: 80svh;
     padding: 1rem;
@@ -448,132 +289,34 @@ section,
 }
 
 
-/* End -- Hero Styles */
-
-
-/* Start -- What I Do Styles */
-/* End -- What I Do Styles */
-
-
-/* Start -- Highlights Styles */
-.highlights {
-    & > ul {
-        display: grid;
-        gap: 2rem;
-        grid-template-columns: repeat(2, 1fr);
-
-        @media (min-width: 1024px) {
-            grid-template-columns: repeat(3, 1fr);
-        }
-
-        & em {
-            display: block;
-            font-size: 6rem;
-            font-weight: 700;
-            text-align: center;
-        }
-
-        & .suffix {
-            font-size: 3rem;
-        }
-
-        
-    }
-}
-/* End -- Highlights Styles */
-
-
-/* Start -- Skills Styles */
-.skills {
-    & > ul {
-        color: white;
-        display: flex;
-        flex-wrap: wrap;
-        gap: .75rem;
-        & > li {
-            background: var(--blue);
-            border-radius: 2rem;
-            padding: .5rem 1rem;
-        }
-    }
-}
-/* End -- Skills Styles */
-
-
-/* Start -- Aside Styles */
-.aside {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgb(79, 74, 180) 0%, rgb(42, 42, 178) 45%, rgba(0,212,255,1) 100%);
+aside {
+    background: rgb(109,109,201);
+    background: radial-gradient(circle, rgba(109,109,201,1) 0%, rgba(0,212,255,1) 100%);
     color: var(--white);
-    padding: 3rem 1rem;
-
-    & h2 {
-        margin-bottom: 0;
-    }
-    
-    & img {
-        width: 200px;
-    }
-    
+    padding: 2rem 1rem;
+    text-align: center;
 }
-/* End -- Aside Styles */
-
-
-/* Start -- My Story Styles */
-.mystory {
-    & > ul {
-        display: grid;
-        gap: 3rem;
-        grid-template-columns: repeat(2, 1fr);
-
-        @media (min-width: 1024px) {
-            grid-template-columns: repeat(3, 1fr);
-        }
-    }
-
-    & i {
-        display: block;
-        font-size: 3rem;
-        text-align: center;
-    }
+aside h2,
+aside p {
+    margin-bottom: 1rem;
 }
-/* End -- My Story Styles */
 
-
-/* Start -- Footer Styles */
 footer {
-    background-color: var(--darkgray);
-    color: white;
-
-    & a:link,         /* A link that has not been visited */
-    & a:visited {     /* A link that has been visited */
-        color: var(--link-color-alt);
-    }
-}
-/* End -- Footer Styles */
-
-
-
-
-
-
-
-
-
-
-
-/* Start -- Contact Form Styles */
-.contact-form > * { 
-    display: block;
-}
-
-.contact-form > input,
-.contact-form > textarea { 
-    margin-bottom: 2rem;
+    background-color: var(--footergray);
+    color: var(--white);
     padding: 1rem;
-    width: 100%;
+    text-align: left;
 }
-.contact-form > textarea {
-    resize: vertical;
+footer h3 {
+    margin-bottom: .5rem;
 }
-/* End -- Contact Form Styles */
+footer .navigation {
+    align-items: unset;
+    flex-direction: column;
+    gap: unset;
+    justify-self: unset;
+    margin-bottom: 2rem;
+}
+footer .contact-form {
+    max-width: 45%;
+}
