Working on new styles

--- a/public/style.css
+++ b/public/style.css
@@ -219,6 +219,11 @@ h4 {
     border: 1px solid var(--orange);
     color: var(--is-secondary-text);
 }
+
+.no-list-style {
+    list-style: none;
+    padding-left: 0;
+}
 /* End -- Utilities */
 
 
