--- a/public/style.css
+++ b/public/style.css
@@ -7,14 +7,15 @@
     --lightgray: #f5f5f5;
     --darkgray: #1d1d1d;
     --footergray: #3a3a3a;
-    --blue: #1A73E0;
-    --orange: #f35900;
+    --blue: #0049DA;
+    --orange: #e45400;
+    --purple: #7710D1;
 
     --text-color-primary: var(--darkgray);
     --text-color-secondary: hsl(205, 15%, 47%);
     --text-color-alternative: rgb(36, 119, 228);
 
-    --link-color: rgb(0, 102, 204);
+    --link-color: rgb(78, 159, 240);
     --link-color-alt: rgb(92, 173, 255);
 
     --is-primary-text: #ffffff;
