--- a/public/style.css
+++ b/public/style.css
@@ -239,10 +239,10 @@ h4 {
 }
 
 [class^="fa"] {
-    display: block;
     font-size: 3rem;
     margin: 0 auto 1rem auto;
     text-align: center;
+    width: 100%;
 }
 /* End -- Utilities */
 
