--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@
 
     /* Typography */
     --font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --line-height: 1.5;
+    --line-height: 1.125;
     --font-size: 1rem;
     --font-weight: 400;
 
@@ -226,12 +226,13 @@ h4 {
 
 .no-list-style {
     list-style: none;
-    padding-left: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .grid {
     display: grid;
-    gap: 1rem;
+    gap: 2rem;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     margin: 0 auto;
     max-width: 1200px;
