--- a/public/style.css
+++ b/public/style.css
@@ -242,9 +242,14 @@ h4 {
 [class^="fa"] {
     font-size: 3rem;
     margin: 0 auto 1rem auto;
-    text-align: center;
+    text-align: left;
     width: 100%;
+
+    @media (min-width: 711px) {
+        text-align: center;
+    }
 }
+
 /* End -- Utilities */
 
 
