--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@
 
     /* Typography */
     --font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --line-height: 1.125;
+    --line-height: 1.25;
     --font-size: 1rem;
     --font-weight: 400;
 
@@ -180,10 +180,7 @@ h3 {
     font-weight: 700;
     margin-bottom: 1em;
     text-align: center;
-    
-    &:not(:first-child) {
-        margin-top: 3rem;
-    }
+    margin-top: 5rem;
 }
 h4 {
     font-size: 1.25rem;
@@ -193,6 +190,10 @@ h4 {
     &:not(:first-child) {
         margin-top: 3rem;
     }
+}
+
+section h3:first-of-type {
+    margin-top: 0;
 }
 
 
@@ -246,6 +247,19 @@ h4 {
 
     @media (min-width: 679px) {
         text-align: center;
+    }
+}
+
+.skills {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-size: .9rem;
+    gap: .5rem 1rem;
+    
+    @media (min-width: 600px) {
+        margin: 0 auto;
+        width: 50%;
     }
 }
 
