--- a/public/style.css
+++ b/public/style.css
@@ -354,6 +354,7 @@ section h3:first-of-type {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     margin: 0 auto;
     max-width: 1000px;
+    padding: 0;
 }
 
 .highlights li {
