--- a/public/style.css
+++ b/public/style.css
@@ -47,9 +47,12 @@
 *,
 ::before,
 ::after {
-  border-width: 0;
-  box-sizing: border-box;
+    box-sizing: border-box;
+    border-width: 0;
+    border-style: solid;
+    border-color: var(--border-color-default);
 }
+
 html {
     scroll-behavior: smooth;
 }
