--- a/public/style.css
+++ b/public/style.css
@@ -262,24 +262,24 @@ section h3:first-of-type {
     }
 }
 
-.grid li {
+/* .grid li {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 2rem
-}
+} */
 
 
 
 [class^="fa"] {
     font-size: 3rem;
-    /* margin: 0 auto 1rem auto; */
-    /* text-align: left; */
-    /* width: auto; */
+    margin: 0 auto 1rem auto;
+    text-align: left;
+    width: auto;
 
-    /* @media (min-width: 679px) {
+    @media (min-width: 679px) {
         text-align: center;
-    } */
+    }
 }
 
 .skills {
