--- a/public/style.css
+++ b/public/style.css
@@ -248,7 +248,6 @@ section h3:first-of-type {
 .grid {
     display: grid;
     gap: 2rem;
-    /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
     grid-template-columns: repeat(1, 1fr); 
     margin: 0 auto;
     max-width: 1200px;
@@ -262,12 +261,12 @@ section h3:first-of-type {
     }
 }
 
-/* .grid li {
+.grid li {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 2rem
-} */
+}
 
 
 
