--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,6 +7,6 @@
     <p class="mt-15 text-2xl text-slate-600">Turning Tech Headaches into High-Fives, One Script at a Time.</p>
     <div class="mt-15 ">
         <a href="#contact-form" class="bg-blue-500 p-4 rounded-lg text-white">Contact Me</a>
-        <a href="#whatido" class="bg-blue-100 p-4 rounded-lg text-black">Learn More</a>
+        <a href="#whatido" class="border border-solid border-blue-500 p-4 rounded-lg text-blue-500">Learn More</a>
     </div>
 </section>
