--- a/src/components/MyStory.astro
+++ b/src/components/MyStory.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<section class="px-4 py-12 mx-auto">
+<section id="mystory" class="px-4 py-12 mx-auto">
 <h2 class="text-4xl text-center">My Story</h2>
 <h3 class="text-2xl text-center text-slate-800 mt-8 mb-4">1990's - How IT All Began</h3>
 <ul class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
