--- a/src/components/Feature.astro
+++ b/src/components/Feature.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<section class="px-4 py-12  bg-slate-100">
+<section id="whatido" class="px-4 py-12  bg-slate-100">
     <div class="max-w-5xl mx-auto">
         <h2 class="text-4xl text-center">Transforming Complexity into Simplicity</h2>
         <p class="mt-8">As a <strong>Software Production Management & Reliability Engineering Manager</strong> at Morgan Stanley, I lead teams to ensure the stability and scalability of critical systems, drive automation to minimize manual intervention, and implement proactive strategies to optimize platform performance. With a focus on operational excellence, I collaborate across teams to enhance incident management, streamline deployments, and deliver high-reliability solutions in fast-paced, high-stakes environments.</p>
