--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,5 @@
 ---
+import Contact from './Contact.astro'
 ---
 
 <footer class="px-4 py-12 bg-gray-900 text-gray-200 flex flex-col-reverse lg:flex-row gap-8 items-center justify-between">
@@ -14,24 +15,5 @@
       </ul>
     </div>
 
-
-    <form action="#" method="post" id="contact-form" >
-      <div class="flex flex-col">
-        <h3 class="text-4xl text-center">Contact Me</h3>
-
-        <label for="name" class="mt-8">Name *</label>
-        <input type="text" name="name" id="name" placeholder="John Doe" required autocomplete="given-name" class="p-4 rounded border-solid border-1 border-gray-700 bg-gray-800">
-
-        <label for="email" class="mt-8">Email *</label>
-        <input type="email" name="email" id="email" placeholder="john@doe.com" required autocomplete="off" class="p-4 rounded border-solid border-1 border-gray-700 bg-gray-800">
-        
-        <label for="message" class="mt-8">Message *</label>
-        <textarea name="message" id="message" cols="30" rows="6" required  class="p-4 rounded border-solid border-1 border-gray-700 bg-gray-800"></textarea>
-        
-        <p id="contact-form-status"></p>
-
-        <button id="submit"  class="mt-8 p-4 rounded-xl bg-blue-500" type="submit">Send Message</button>
-      </div>
-    </form>
-
+    <Contact />
   </footer>
