--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -50,7 +50,7 @@ const skills_soft = [
 
 ---
 
-<section class="px-4 py-12 text-center">
+<section id="skills" class="px-4 py-12 text-center">
     <h2 class="text-4xl">Skills</h2>
     <h3 class="text-2xl font-bold mt-12">Technical Skills</h3>
     <ul class="m-auto mt-8 text-md flex flex-wrap gap-x-8 gap-y-4 max-w-3xl">
